--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+ 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Biblioteca Digital</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <main>
+      <h1>DISEÑO FACHERITO CON ANIMACIÓN DE ESPERA</h1>
+    </main>
+    <script src="/js/indapp.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://use.fontawesome.com/823835b326.js"></script>
+    <script>
+      localStorage.clear();
+      let usuarios = [
+        {
+          id:1,
+          nombre: "Admin",
+          email: "adminbiblioteca@gmail.com",
+          contrasenia: "admin1234",
+          imagen:
+            "https://static.vecteezy.com/system/resources/previews/000/348/220/original/vector-reading-icon.jpg",
+        },
+      ];
+      localStorage.setItem("usuarios", JSON.stringify(usuarios));
+
+      setTimeout(function () {
+        location.replace("/html/home.html");
+      }, 2000);
+    </script>
+  </body>
 </html>
