agrego pag error

--- a/html/error404.html
+++ b/html/error404.html
@@ -73,6 +73,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="/js/login.js"></script>
+    <script src="/js/error.js"></script>
   </body>
 </html>
