--- a/html/home.html
+++ b/html/home.html
@@ -56,6 +56,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Cargar</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
+            </li>
             
           </ul>
         </div>
