--- a/html/login.html
+++ b/html/login.html
@@ -17,50 +17,120 @@
     <title>Login</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row mt-5">
-        <div class="col col-md-6 offset-md-3">
-          <div class="card">
-            <h5 class="card-header">Inicio de sesión</h5>
-            <div class="card-body">
-              <form onsubmit="envioForm(event)">
-                <div class="form-group">
-                  <label>Email</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="email"
-                    id="userEmail"
-                    onchange="actualizar(event)"
-                  />
-                </div>
-                <div class="form-group">
-                  <label>Contraseña</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    name="contrasenia"
-                    id="userPassword"
-                    onchange="actualizar(event)"
-                  />
-                </div>
-                <button
-                  class="btn btn-info float-right"
-                  id="btnSubmit"
-                  type="submit"
+    <header>
+      <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-start"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item" id="sesBoton">
+                <a class="nav-link" href="/html/login.html" 
+                  ><i class="fa fa-user" aria-hidden="true"
+                    >Iniciar Sesión</i
+                  ></a
                 >
-                  Entrar
+              </li>
+              <li class="nav-item" id="usuarioBoton">
+                <a
+                  class="nav-link"
+                  href="#"
+                  id="perfLink"
+                  onclick="irPerfil()"
+                ></a>
+              </li>
+              <li class="nav-item" id="cerrarBoton">
+                <button
+                  class="btn-danger"
+                  id="cerrarLink"
+                  onclick="cerrarSesion()"
+                >
+                  X
                 </button>
-                <p>
-                  Si aún no tiene cuenta regístrese desde
-                  <a href="/html/registro.html">aquí</a>
-                </p>
-              </form>
+              </li>
+              <li class="nav-item activado">
+                <a class="nav-link" href="/html/home.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/html/cargar.html">Cargar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <a
+          class="navbar-brand font-weight-bold justify-content-end"
+          id="logonav"
+          href="/html/home.html"
+          >Logo</a
+        >
+      </nav>
+    </header>
+    <main>
+      <div class="container">
+        <div class="row mt-5">
+          <div class="col col-md-6 offset-md-3">
+            <div class="card">
+              <h5 class="card-header">Inicio de sesión</h5>
+              <div class="card-body">
+                <form onsubmit="envioForm(event)">
+                  <div class="form-group">
+                    <label>Email</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      name="email"
+                      id="userEmail"
+                      onchange="actualizar(event)"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label>Contraseña</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      name="contrasenia"
+                      id="userPassword"
+                      onchange="actualizar(event)"
+                    />
+                  </div>
+                  <button
+                    class="btn btn-info float-right"
+                    id="btnSubmit"
+                    type="submit"
+                  >
+                    Entrar
+                  </button>
+                  <p>
+                    Si aún no tiene cuenta regístrese desde
+                    <a href="/html/registro.html">aquí</a>
+                  </p>
+                </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
