--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -57,6 +57,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Cargar</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/html/contacto.html">Contacto</a>
+              </li>
             </ul>
           </div>
           <a class="navbar-brand font-weight-bold justify-content-end" href="#">Logo</a>
