--- a/html/contacto.html
+++ b/html/contacto.html
@@ -60,8 +60,9 @@
               <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/contacto.html">Contacto</a>
+              <a class="nav-link" href="#">Contacto</a>
             </li>
+            
           </ul>
         </div>
         
@@ -71,28 +72,49 @@
         >
     </nav>
   </header>
+  
   <main>
-    <div id="contenedHome">
-
-    </div>
+      <section class="contact-form">
+        <div class="container">
+          <div class="row mt-4">
+            <div class="col text-center">
+              <h2 class="font-weight-bold">
+                Contáctanos
+              </h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-8 offset-md-2">
+              <form>
+                <div class="form-row">
+                  <div class="col-12 col-md-6 mt-3">
+                    <input type="text" class="form-control" placeholder=" 👤 Nombre">
+                  </div>
+                  <div class="col-12 col-md-6 mt-3">
+                    <input type="text" class="form-control" placeholder=" 👤 Apellido">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12 col-md-6 mt-3">
+                    <input type="email" class="form-control" placeholder=" 📧 ejemplo@ejemplo.com">
+                  </div>
+                  <div class="col-12 col-md-6 mt-3">
+                    <input type="phone" class="form-control" placeholder=" 📞 Teléfono">
+                  </div>
+                </div>
+                <div class="form-row mt-3">
+                  <div class="col ">
+                    <textarea class="form-control" rows="3" placeholder=" 📝 Escribe aquí tu mensaje para nosotros"></textarea>
+                  </div>
+                </div>
+                <div class="form-row mt-3">
+                  <div class="col-12 col-md-6 offset-md-3">
+                    <button href="#" class="btn contact-btn btn-block">Enviar</button>
+                  </div>
+                </div>
+            </div>
+            </form>
+          </div>
+        </div>
+      </section>
   </main>
-
-
- 
-
-
-  <footer></footer>
-  <script src="/js/homeapp.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://use.fontawesome.com/823835b326.js"></script>
-</body>
-</html>
