--- a/html/login.html
+++ b/html/login.html
@@ -74,6 +74,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/html/contacto.html">Contacto</a>
+              </li>
             </ul>
           </div>
         </div>
