--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -75,6 +75,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Nosotros</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/html/contacto.html">Contacto</a>
+              </li>
             </ul>
           </div>
         </div>
