--- a/html/registro.html
+++ b/html/registro.html
@@ -75,6 +75,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/html/contacto.html">Contacto</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -87,62 +90,64 @@
       </nav>
     </header>
     <main>
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col col-md-6">
-            <div class="card">
-              <div class="card-body">
-                <form
-                  onsubmit="envioForm(event)"
-                  class="needs-validation"
-                  novalidate
-                >
-                  <div class="form-group">
-                    <label>Nombre</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      name="nombre"
-                      required
-                      onchange="actualizar(event)"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label>Email</label>
-                    <input
-                      type="email"
-                      class="form-control"
-                      name="email"
-                      required
-                      onchange="actualizar(event)"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label>Contraseña</label>
-                    <input
-                      type="password"
-                      class="form-control"
-                      name="contrasenia"
-                      required
-                      onchange="actualizar(event)"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label>Imagen</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      name="imagen"
-                      onchange="actualizar(event)"
-                    />
-                  </div>
-                  <button class="btn btn-info" id="btnSubmit">Guardar</button>
-                </form>
+      <section>
+        <div class="container mt-5">
+          <div class="row">
+            <div class="col col-md-6">
+              <div class="card">
+                <div class="card-body">
+                  <form
+                    onsubmit="envioForm(event)"
+                    class="needs-validation"
+                    novalidate
+                  >
+                    <div class="form-group">
+                      <label>Nombre</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="nombre"
+                        required
+                        onchange="actualizar(event)"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label>Email</label>
+                      <input
+                        type="email"
+                        class="form-control"
+                        name="email"
+                        required
+                        onchange="actualizar(event)"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label>Contraseña</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        name="contrasenia"
+                        required
+                        onchange="actualizar(event)"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label>Imagen</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="imagen"
+                        onchange="actualizar(event)"
+                      />
+                    </div>
+                    <button class="btn btn-info" id="btnSubmit">Guardar</button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
     <script src="/js/registro.js"></script>
     <script
