agrego funcion de enviar mail

--- a/html/registro.html
+++ b/html/registro.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Biblioteca digital</title>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script type="text/javascript">
+(function() {
+emailjs.init("user_s7HwAahidzc2rhmV4pspv");
+})();
+</script>
   </head>
   <body>
     <header>
