--- a/html/error404.html
+++ b/html/error404.html
@@ -13,55 +13,12 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-
-    <title>Login</title>
+<link rel="stylesheet" href="/css/error.css">
+    <title>Error404</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row mt-5">
-        <div class="col col-md-6 offset-md-3">
-          <div class="card">
-            <h5 class="card-header">Inicio de sesión</h5>
-            <div class="card-body">
-              <form onsubmit="envioForm(event)">
-                <div class="form-group">
-                  <label>Email</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="email"
-                    id="userEmail"
-                    onchange="actualizar(event)"
-                  />
-                </div>
-                <div class="form-group">
-                  <label>Contraseña</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    name="contrasenia"
-                    id="userPassword"
-                    onchange="actualizar(event)"
-                  />
-                </div>
-                <button
-                  class="btn btn-info float-right"
-                  id="btnSubmit"
-                  type="submit"
-                >
-                  Entrar
-                </button>
-                <p>
-                  Si aún no tiene cuenta regístrese desde
-                  <a href="/html/registro.html">aquí</a>
-                </p>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+ 
+    
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
