--- a/html/home.html
+++ b/html/home.html
@@ -14,6 +14,16 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    
+    <!--EMAIL JS-->
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+    (function() {
+      emailjs.init("user_s7HwAahidzc2rhmV4pspv");
+      })();
+      </script>
+    <!--fin email js-->
     <title>Biblioteca Digital</title>
   </head>
   <body>
@@ -51,6 +61,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/html/micuenta.html">Mi cuenta</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
             </li>
             <li class="nav-item">
@@ -62,6 +75,14 @@
             <li class="nav-item">
               <a class="nav-link" href="/html/contacto.html">Contacto</a>
             </li>
+            <button
+              type="button"
+              class="btn btn-success btn-sm"
+              data-toggle="modal"
+              data-target="#exampleModal"
+              >
+               Subscríbete
+              </button>
           </ul>
         </div>
         
@@ -71,6 +92,68 @@
         >
     </nav>
   </header>
+      <!--Comienzo de modal suscripción
+       NO SEPARAR DE NAVBAR-->
+
+
+    <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body p-0 row">
+          <div class="col-12 col-lg-5 ad p-0">
+            <img
+              src="https://image.freepik.com/foto-gratis/taza-cafe-angulo-alto-libros_23-2148882780.jpg"
+              width="100%"
+              height="100%"
+            />
+          </div>
+          <div class="details col-12 col-lg-7">
+            <h2>QUÉDATE CONECTADO</h2>
+            <p>
+              <small class="para"
+                >Suscríbete y accede al alquiler de 2 libros totalmente gratuitos al mes!<br />
+                 Además estarás al día con nuevos lanzamientos, concursos, noticias.etc.
+              </small>
+            </p>
+            <p>
+              <small class="para"
+                >Nuestro mail es enviado cada semana, los días<br />Lunes</small
+              >
+            </p>
+            <button
+            type="button"
+            class="btn btn-success btn-sm mb-5"
+            data-toggle="modal"
+            data-target="#exampleModal"
+            onclick= "confirmarSuscripcion()"
+            >
+            Suscribirme
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Fin de modal suscripción-->
   <main>
     <div id="contenedHome">
 
@@ -83,6 +166,7 @@
 
   <footer></footer>
   <script src="/js/homeapp.js"></script>
+  <script src="/js/suscripcion.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
