--- a/html/micuenta.html
+++ b/html/micuenta.html
@@ -54,6 +54,9 @@
             <li class="nav-item" id="cerrarBoton">
              <button class="btn-danger" id="cerrarLink" onclick="cerrarSesion()">x</button>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Mi cuenta</a>
+              </li>
             <li class="nav-item activado">
               <a class="nav-link" href="#"
                 >Inicio <span class="sr-only">(current)</span></a
@@ -151,55 +154,74 @@
    </div>
    
    <!--Fin de modal suscripción-->
-  
+  <!--Inicio seccion mi cuenta-->
   <main>
-      <section class="contact-form">
-        <div class="container">
-          <div class="row mt-4">
-            <div class="col text-center">
-              <h2 class="font-weight-bold">
-                Contáctanos
-              </h2>
-            </div>
-          </div>
+    <section>
+        <div class="container mt-5">
           <div class="row">
-            <div class="col-12 col-md-8 offset-md-2">
-              <form>
-                <div class="form-row">
-                  <div class="col-12 col-md-6 mt-3">
-                    <input type="text" class="form-control" placeholder=" 👤 Nombre">
-                  </div>
-                  <div class="col-12 col-md-6 mt-3">
-                    <input type="text" class="form-control" placeholder=" 👤 Apellido">
-                  </div>
+            <div class="col col-md-6">
+                <h2 class="card-header">MI CUENTA</h2>
+              <div class="card">
+                <div class="card-body">
+                  <form
+                    onsubmit="guardarCambios(event)"
+                    class="needs-validation"
+                    novalidate
+                  >
+                    <div class="form-group">
+                      <label>Nombre</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="nombre"
+                        id="nombre"
+                        onchange="actualizar(event)"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label>Email</label>
+                      <input
+                        type="email"
+                        class="form-control"
+                        name="email"
+                        id="userEmail"
+                        onchange="actualizar(event)"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label>Teléfono</label>
+                      <input
+                        type="phone"
+                        class="form-control"
+                        name="telefono"
+                        required
+                        onchange="actualizar(event)"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label>Nacionalidad</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="nacionalidad"
+                        onchange="actualizar(event)"
+                      />
+                    </div>
+
+                    <button class="btn btn-info" id="btnSubmit">Guardar</button>
+                  </form>
                 </div>
-                <div class="row">
-                  <div class="col-12 col-md-6 mt-3">
-                    <input type="email" class="form-control" placeholder=" 📧 ejemplo@ejemplo.com">
-                  </div>
-                  <div class="col-12 col-md-6 mt-3">
-                    <input type="phone" class="form-control" placeholder=" 📞 Teléfono">
-                  </div>
-                </div>
-                <div class="form-row mt-3">
-                  <div class="col ">
-                    <textarea class="form-control" rows="3" placeholder=" 📝 Escribe aquí tu mensaje para nosotros"></textarea>
-                  </div>
-                </div>
-                <div class="form-row mt-3">
-                  <div class="col-12 col-md-6 offset-md-3">
-                    <button href="#" class="btn contact-btn btn-block">Enviar</button>
-                  </div>
-                </div>
+              </div>
             </div>
-            </form>
           </div>
         </div>
       </section>
   </main>
   <footer></footer>
   
+  
   <script src="/js/suscripcion.js"></script>
+  <script src="/js/micuenta.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -211,5 +233,31 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://use.fontawesome.com/823835b326.js"></script>
+    <script>
+        (function () {
+          "use strict";
+          window.addEventListener(
+            "load",
+            function () {
+              var campos = document.getElementsByClassName("needs-validation");
+  
+              var validar = Array.prototype.filter.call(campos, function (form) {
+                form.addEventListener(
+                  "submit",
+                  function (event) {
+                    if (form.checkValidity() === false) {
+                      event.preventDefault();
+                      event.stopPropagation();
+                    }
+                    form.classList.add("was-validated");
+                  },
+                  false
+                );
+              });
+            },
+            false
+          );
+        })();
+      </script>
 </body>
 </html>
