--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -38,7 +38,7 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item" id="sesBoton" >
-                <a class="nav-link" href="/login.html" ><i class="fa fa-user" aria-hidden="true">Iniciar Sesión</i></a>
+                <a class="nav-link" href="/html/login.html" ><i class="fa fa-user" aria-hidden="true">Iniciar Sesión</i></a>
               </li>
               <li class="nav-item" id="usuarioBoton">
                 <a class="nav-link" href="#" id="perfLink" onclick="irPerfil()"></a>
