--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -88,6 +88,62 @@
       
     </main>
  
+    <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body p-0 row">
+          <div class="col-12 col-lg-5 ad p-0">
+            <img
+              src="https://image.freepik.com/foto-gratis/taza-cafe-angulo-alto-libros_23-2148882780.jpg"
+              width="100%"
+              height="100%"
+            />
+          </div>
+          <div class="details col-12 col-lg-7">
+           <h2>QUÉDATE CONECTADO</h2>
+           <p>
+             <small class="para"
+               >Suscríbete y accede al alquiler de 2 libros totalmente gratuitos al mes!<br />
+                Además estarás al día con nuevos lanzamientos, concursos, noticias.etc.
+             </small>
+           </p>
+           <p>
+             <small class="para"
+               >Nuestro mail es enviado cada semana, los días<br />Lunes</small
+             >
+           </p>
+           <button
+           type="button"
+           class="btn btn-success btn-sm mb-5"
+           data-toggle="modal"
+           data-target="#exampleModal"
+           onclick= "confirmarSuscripcion()"
+           >
+           Suscribirme
+           </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
  <!-- Modal info Libro -->
  <div
