--- a/html/cargar.html
+++ b/html/cargar.html
@@ -47,30 +47,6 @@
 
     <main>
       <h1>Carga de libro</h1>
-<!-- 
-      <div class="row">
-        <div class="col-3">
-          <div class="center">
-            <div class="property-card">
-              <a href="#">
-                <div class="property-image" >
-                  <div class="property-image-title"> -->
-                    
-                    <!-- Optional <h5>Card Title</h5> If you want it, turn on the CSS also. -->
-                  <!-- </div>
-                </div></a>
-              <div class="property-description">
-                <h5> Card Title </h5>
-                <p>Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More Bingo. Lorem Ipum doth be hard.</p>
-              </div>
-              <a href="#">
-                <div class="property-social-icons"> -->
-                  <!-- I would usually put multipe divs inside here set to flex. Some people might use Ul li. Multiple Solutions -->
-                <!-- </div>
-              </a>
-            </div>
-        </div>
-      </div> -->
     <!-- ********************Vista previa del libro******************** -->
       <div class="row">
         <div class="col-3">
@@ -95,27 +71,25 @@
               <p class="card-text">
                 <strong>Año emision: </strong><span id="emisionCard"></span>
               </p>
-              <a onclick="vistaPrevia()" class="btn btn-outline-success btn-block"
-                >Vista previa</a
-              >
+              <a onclick="vistaPrevia()" class="btn btn-outline-success btn-block">Vista previa</a>
             </div>
           </div>
         </div>
     <!-- ********************Formulario de carga de libros******************** -->
         <div class="col-8">
-          <form class="needs-validation" novalidate>
+          <form class="needs-validation" onsubmit="handleSubmit(event)" novalidate>
             <div class="form-group">
               <label>Titulo</label>
-              <input type="text" class="form-control" id="tituloCarga" required>
+              <input type="text" class="form-control" id="tituloCarga" name="titulo" onchange="handleChange(event)" required>
             </div>
             <div class="form-group">
               <label>Autor</label>
-              <input type="text" class="form-control" id="autorCarga" required>
+              <input type="text" class="form-control" id="autorCarga" name="autor" onchange="handleChange(event)" required>
             </div>
               <div class="row">
                 <div class="col-6">
                   <span>Categoria</span>
-                  <select class="form-group form-control mt-2" name="categoria" id="categoriaCarga">
+                  <select class="form-group form-control mt-2" name="categoria" id="categoriaCarga" onchange="handleChange(event)">
                     <option value="Ficcion" selected>Ficcion</option>
                     <option value="Fantasia">Fantasia</option>
                     <option value="Autoayuda">Autoayuda</option>
@@ -130,23 +104,23 @@
              <div class="row">
                 <div class="form-group col-8">
                     <label>Editorial</label>
-                    <input type="text" class="form-control" id="editorialCarga" required>
+                    <input type="text" class="form-control" id="editorialCarga" name="editorial" onchange="handleChange(event)" required> 
                 </div>
                 <div class="form-group col-4">
                     <label>Año de emision</label>
-                    <input type="number" min="1900" max="2099" step="1" value="2016" class="form-control" id="emisionCarga" >
+                    <input type="number" min="1900" max="2099" step="1" value="2016" class="form-control" id="emisionCarga" name="emision" onchange="handleChange(event)">
                 </div>                        
             </div>
             <div class="form-group">
               <label>Imagen</label>
-              <input type="text" class="form-control" id="imagenCarga">
+              <input type="text" class="form-control" id="imagenCarga" name="imagen" onchange="handleChange(event)">
             </div>
             <div class="form-group">
               <label>Contraportada</label>
-              <input type="text" class="form-control" id="contraportadaCarga" required>
+              <input type="text" class="form-control" id="contraportadaCarga" name="contraportada" onchange="handleChange(event)" required>
             </div>
       
-            <button class="btn btn-primary" onclick="addLibro()">Cargar</button>
+            <button class="btn btn-primary">Cargar</button>
           </form>
 
         </div>
