avances en el header

--- a/html/header.html
+++ b/html/header.html
@@ -51,7 +51,7 @@
       <nav class="navbar navbar-expand-md" id="gaNavbar">
         <div class="container" id="gacontenedor">
           <button
-            class="navbar-toggler"
+            class="navbar-toggler justify-content-end"
             id="gaColBtn"
             type="button"
             data-toggle="collapse"
