avances en el header

--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -326,6 +326,7 @@ Modal modificar libro -->
              class="form-control"
              id="tituloModif"
              name="titulo"
+             maxlength="150"
              onchange="modifLibro(event)"
            />
          </div>
@@ -336,6 +337,7 @@ Modal modificar libro -->
              class="form-control"
              id="autorModif"
              name="autor"
+             maxlength="150"
              onchange="modifLibro(event)"
            />
          </div>
@@ -346,6 +348,7 @@ Modal modificar libro -->
              class="form-control"
              id="editorialModif"
              name="editorial"
+             maxlength="150"
              onchange="modifLibro(event)"
            />
          </div>
@@ -356,6 +359,7 @@ Modal modificar libro -->
              class="form-control"
              id="categoriaModif"
              name="categoria"
+             maxlength="150"
              onchange="modifLibro(event)"
            />
          </div>
@@ -375,6 +379,7 @@ Modal modificar libro -->
              class="form-control"
              id="anioModif"
              name="anio"
+             maxlength="5"
              onchange="modifLibro(event)"
            />
          </div>
