--- a/html/registro.html
+++ b/html/registro.html
@@ -114,6 +114,7 @@ emailjs.init("user_s7HwAahidzc2rhmV4pspv");
                         class="form-control"
                         name="nombre"
                         required
+                        maxlength="150"
                         onchange="actualizar(event)"
                       />
                     </div>
@@ -123,6 +124,7 @@ emailjs.init("user_s7HwAahidzc2rhmV4pspv");
                         type="email"
                         class="form-control"
                         name="email"
+                        maxlength="150"
                         required
                         onchange="actualizar(event)"
                       />
@@ -134,6 +136,7 @@ emailjs.init("user_s7HwAahidzc2rhmV4pspv");
                         class="form-control"
                         name="contrasenia"
                         required
+                        maxlength="150"
                         onchange="actualizar(event)"
                       />
                     </div>
