--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 contrasenia: "admin1234",
                 imagen:
                   "https://static.vecteezy.com/system/resources/previews/000/348/220/original/vector-reading-icon.jpg",
+                  suscripto: false,
               }
             ];
                   localStorage.setItem("usuarios", JSON.stringify(usuarios));
