--- a/html/login.html
+++ b/html/login.html
@@ -103,6 +103,7 @@
                       class="form-control"
                       name="email"
                       id="userEmail"
+                      maxlength="150"
                       onchange="actualizar(event)"
                     />
                   </div>
@@ -113,6 +114,7 @@
                       class="form-control"
                       name="contrasenia"
                       id="userPassword"
+                      maxlength="150"
                       onchange="actualizar(event)"
                     />
                   </div>
