--- a/index2.html
+++ b/index2.html
@@ -12,29 +12,30 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/ind.css">
+    <link rel="stylesheet" href="/css/index2.css">
     <title>Biblioteca Digital</title>
   </head>
   <body>
     <main>
-      <section class="Tittle">
-        <p>Los Magios 2.0 corporation</p>
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-6 mt-15">
+                      <p class="tracking-out-contract">Los Magios 2.0 corporation</p>
+                    </div>
+                </div>
+            </div>
+
+      <section class="logo">
+          <div class="container">
+              <div class="row">
+                  <div class="col justify-content-center">
+                    <img class="bounce-in-left" width="100vw" height="100vh" src="/img/logo svg.png" alt="logo">
+                  </div>
+              </div>
+            </div>
+        
       </section>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
     </main>
     <script src="/js/indapp.js"></script>
     <script
