--- a/html/registro.html
+++ b/html/registro.html
@@ -14,7 +14,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/login.css" />
-
+    <link
+    rel="stylesheet"
+    href="/css/screen480.css"
+    media="screen and (min-width:480px)"
+  />
     <title>Biblioteca digital</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script type="text/javascript">
@@ -174,6 +178,7 @@ emailjs.init("user_s7HwAahidzc2rhmV4pspv");
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
+    <script src="https://use.fontawesome.com/823835b326.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
