Actualizo version de home

--- a/html/home.html
+++ b/html/home.html
@@ -17,7 +17,7 @@
   <title>Biblioteca Digital</title>
 </head>
 
-<body onload="ordenaDestacadosAccion();">
+<body>
   <header>
     <nav class="navbar navbar-expand-md navbar-light">
       <div class="container">
@@ -47,37 +47,32 @@
 
 
     <div class="container-fluid">
-      <h4>Más Destacados en Categoría Acción</h1>
-        <div class="row" id="Accion">
+      <h4 class="destacados">Destacados en Categoría Ficción </h1>
+        <div class="row" id="Ficción">
         </div>
     </div>
 
-    <!-- <div class="container-fluid" id="Accion">
-      </div> -->
+ 
 
 
 
     <div class="container-fluid">
-      <h4>Más Destacados en Categoría Terror</h4>
-      <div class="row" id="Terror">
+      <h4 class="destacados">Destacados en Categoría Drama</h4>
+      <div class="row" id="Drama">
       </div>
     </div>
 
-    <!-- 
-      <div class="container-fluid" id="Terror">
-      </div> -->
+
 
 
 
     <div class="container-fluid">
-      <h4>Más Destacados en Categoría Ficción</h1>
-        <div class="row" id="Ficcion">
+      <h4 class="destacados">Destacados en Categoría Terror</h1>
+        <div class="row" id="Terror">
         </div>
-    </div>
+  </div>
 
-    <!-- <div class="container-fluid" id="Ficcion">
 
-      </div> -->
 
 
 
