--- a/html/home.html
+++ b/html/home.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/stylehome.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
@@ -47,7 +47,7 @@
 
 
     <div class="container-fluid">
-      <h4 class="destacados">Destacados en Categoría Ficción </h1>
+      <h4 class="destacados-home">Destacados en Categoría Ficción </h1>
         <div class="row" id="Ficción">
         </div>
     </div>
@@ -57,7 +57,7 @@
 
 
     <div class="container-fluid">
-      <h4 class="destacados">Destacados en Categoría Drama</h4>
+      <h4 class="destacados-home">Destacados en Categoría Drama</h4>
       <div class="row" id="Drama">
       </div>
     </div>
@@ -67,7 +67,7 @@
 
 
     <div class="container-fluid">
-      <h4 class="destacados">Destacados en Categoría Terror</h1>
+      <h4 class="destacados-home">Destacados en Categoría Terror</h1>
         <div class="row" id="Terror">
         </div>
   </div>
@@ -94,7 +94,7 @@
 
   <script src="https://use.fontawesome.com/823835b326.js"></script>
 
-  <script src="/js/app.js"></script>
+  <script src="/js/appHome.js"></script>
 
 </body>
 
