header terminado, alerts agregados

--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="/css/style.css">
     <link
     rel="stylesheet"
-    href="/css/screen480.css"
-    media="screen and (min-width:480px)"
+    href="/css/screen768.css"
+    media="screen and (min-width:768px)"
   />
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!--EMAIL JS-->
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -120,7 +121,7 @@
 
       </div>
       <br />
-      <div id="contenedor"></div>
+      <div id="contenedorBus"></div>
       
     </main>
  
