--- a/html/cargar.html
+++ b/html/cargar.html
@@ -10,6 +10,7 @@
     href="/css/screen480.css"
     media="screen and (min-width:480px)"
   />
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Cargar libro</title>
   </head>
   <body>
