--- a/html/login.html
+++ b/html/login.html
@@ -16,9 +16,10 @@
     <link rel="stylesheet" href="/css/login.css" />
     <link
     rel="stylesheet"
-    href="/css/screen480.css"
-    media="screen and (min-width:480px)"
+    href="/css/screen768.css"
+    media="screen and (min-width:768px)"
   />
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Login</title>
   </head>
   <body id="loginBody">
@@ -156,8 +157,8 @@
                 </div>
                 <div class="form-group d-md-flex">
                   
-                  <div class="w-50 justify-content-center">
-                    <a href="/html/error404.html" >Forgot Password</a>
+                  <div class="w-60 justify-content-center">
+                    <a href="/html/error404.html" >¿Olvidaste tu contraseña?</a>
                   </div>
                 </div>
               </form>
