--- a/html/registro.html
+++ b/html/registro.html
@@ -16,9 +16,10 @@
     <link rel="stylesheet" href="/css/login.css" />
     <link
     rel="stylesheet"
-    href="/css/screen480.css"
-    media="screen and (min-width:480px)"
+    href="/css/screen768.css"
+    media="screen and (min-width:768px)"
   />
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Biblioteca digital</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script type="text/javascript">
