--- a/html/micuenta.html
+++ b/html/micuenta.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link
     rel="stylesheet"
-    href="/css/screen480.css"
-    media="screen and (min-width:480px)"
+    href="/css/screen768.css"
+    media="screen and (min-width:768px)"
   />
     <!--EMAIL JS-->
 
@@ -27,6 +27,7 @@
       emailjs.init("user_s7HwAahidzc2rhmV4pspv");
       })();
       </script>
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!--fin email js-->
     <title>Biblioteca Digital</title>
   </head>
