--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -13,12 +13,13 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
     rel="stylesheet"
-    href="/css/screen480.css"
-    media="screen and (min-width:480px)"
+    href="/css/screen768.css"
+    media="screen and (min-width:768px)"
   />
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Biblioteca digital</title>
   </head>
   <body>
