header terminado, alerts agregados

--- a/html/error404.html
+++ b/html/error404.html
@@ -81,13 +81,25 @@
                 <li class="nav-item gaItem">
                   <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
                 </li>
+                
                 <li class="nav-item gaItem">
                   <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item gaItem">
                   <a class="nav-link" href="/html/contacto.html">Contacto</a>
                 </li>
-                
+                <li class="nav-item gaItem soloAdmin">
+                  <a class="nav-link soloAdmin"  href="#">Cargar</a>
+                </li>
+                <button
+                  type="button"
+                  class="btn btn-success btn-sm mb-5 soloUsuario"
+                  data-toggle="modal"
+                  data-target="#exampleModal"
+                  id="susBtn"
+                >
+                  Suscríbete
+                </button>
               </ul>
             </div>
           </div>
