detalles al header

--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -109,7 +109,7 @@
       </nav>
     </header>
     
-    <main>
+    <main id="mainBus">
       <br />
       <br />
       <div class="input-group mb-3">
