--- a/html/home.html
+++ b/html/home.html
@@ -36,7 +36,7 @@
    
   <title>Biblioteca Digital</title>
   </head>
-  <body id="homeBody" onload="cargarTodo()">
+  <body id="homeBody">
     <header id="gaHeader">
       <nav class="navbar navbar-expand-md" id="gaNavbar">
         <div class="container" id="gacontenedor">
@@ -115,11 +115,11 @@
         >
       </nav>
     </header>
-    <main id="main">
+    <main id="mainHome">
 
 
       <div class="container mt-5">
-        <h4 class="destacados-home text-center mb-5 mt-5">Destacados en Categoría Ficción </h4>
+        <h4 class="destacados-home text-center mb-5" style="margin-top: 100px">Destacados en Categoría Ficción </h4>
           <div class="row" id="Ficción">
             
           </div>
