--- a/html/micuenta.html
+++ b/html/micuenta.html
@@ -89,8 +89,10 @@ emailjs.init("user_s7HwAahidzc2rhmV4pspv");
               <li class="nav-item gaItem">
                 <a class="nav-link" href="/html/busqueda.html">Búsqueda</a>
               </li>
-              <li class="nav-item gaItem">
-                <a class="nav-link" href="#">Cargar</a>
+              <li class="nav-item gaItem   soloAdmin">
+                <a class="nav-link soloAdmin" href="/html/cargar.html"
+                  >Cargar</a
+                >
               </li>
               <li class="nav-item gaItem">
                 <a class="nav-link" href="/html/nosotros.html">Nosotros</a>
