--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -62,8 +62,8 @@
                   </div>
                              </li>
                 
-                <li class="nav-item activado gaItem">
-                  <a class="nav-link" href="#"
+                <li class="nav-item  gaItem">
+                  <a class="nav-link" href="/html/home.html"
                     >Inicio </a
                   >
                 </li>
@@ -77,8 +77,10 @@
                 <li class="nav-item gaItem">
                   <a class="nav-link" href="/html/contacto.html">Contacto</a>
                 </li>
-                <li class="nav-item gaItem soloAdmin">
-                  <a class="nav-link soloAdmin"  href="/html/cargar.html">Cargar</a>
+                <li class="nav-item gaItem   soloAdmin">
+                  <a class="nav-link soloAdmin" href="/html/cargar.html"
+                    >Cargar</a
+                  >
                 </li>
                 <button
                   type="button"
@@ -233,13 +235,50 @@
                 </div>
              </div>
     </main>
-    <footer>
-
+    <footer class="footer-wrap">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="column1 col-12 col-md-4 text-center">
+            <img
+              class="footer-img text-center"
+              src="/img/biblioteca-01.png"
+              alt="LOGO"
+            />
+          </div>
+          <div class="column2 col-12 col-md-4 text-center">
+            <div class="row">
+              <label
+                ><i class="bi bi-facebook">Encontranos en Facebook</i></label
+              >
+              <label><i class="bi bi-twitter">Encontranos en Twitter</i></label>
+              <label
+                ><i class="bi bi-instagram">Encontranos en Instagram</i></label
+              >
+              <label><i class="bi bi-youtube">Encontranos en Youtube</i></label>
+            </div>
+          </div>
+          <div class="column3 col-12 col-md-4 text-center">
+              <i class="bi bi-geo-alt">Rioja 31 - Tucuman - Argentina</i>
+    <br>
+              <i class="bi bi-telephone-inbound">0381-5000000 - 0381-4000000</i>
+    <br>
+              <i class="bi bi-envelope">libreriaVirtual@gmail.com.ar</i>
+              <p>________________________________________</p>
+              <strong>
+                <p class="copy">© Copyright 2021 - Derechos reservados </p>
+              </strong>
+              <p>________________________________________</p>
+              <a class="legales" href="#">Politica de privacidad | </a>
+              <a class="legales" href="#"> Legales | </a>
+              <a class="legales" href="#">Terminos y Condiciones</a>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
+    <script src="/js/nosotros.js"></script>
    
   </body>
 </html>
