--- a/html/busqueda.html
+++ b/html/busqueda.html
@@ -152,10 +152,11 @@
              </button>
            </div>
            <div class="modal-body p-0 row">
-             <div class="col-12 col-lg-5 ad p-0">
+             <div class="col-12 col-lg-5 ">
                <img
                  src="https://image.freepik.com/foto-gratis/taza-cafe-angulo-alto-libros_23-2148882780.jpg"
                  id="susImg"
+                 
                />
              </div>
              <div class="details col-12 col-lg-7">
@@ -176,6 +177,7 @@
               class="btn btn-success btn-sm mb-5"
               data-toggle="modal"
               data-target="#exampleModal"
+              id="susBtnMod"
               onclick= "confirmarSuscripcion()"
               >
               Suscribirme
