--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -103,7 +103,7 @@
         >
       </nav>
     </header>
-    <main>
+    <main id="nosotrosMain">
         <section class="mt-4 about-info">
             <div class="container">
               <div class="row mt-5">
